# Velib

./: CMakeLists.txt  LISEZ_MOI_ELEVE.txt  ORGANISATION_CODE.txt  README.md  compile_and_run.sh  compile_from_scratch.sh  recuit_all_data.sh
output_recuit/: data.csv  data2-3-100_cinq_deseq.csv  test2-5-150.csv  test_deseq2-5-150.csv  tmp.csv
scripts/: compile_and_run.sh  graph_recuit.py  run_algorithm_on_all_data.sh  run_from_scratch.sh
src/: annealingSolver.cpp  carloSolver.cpp  circuit.cpp  circuit.hpp  common.hpp  descentSolver.cpp  instance.cpp  instance.hpp  main.cpp  optionparser.hpp  options.hpp  remorque.cpp  remorque.hpp  site.cpp  site.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  station.cpp  station.hpp  steepest2optSolver.cpp  stupidSolver.cpp  tabooSolver.cpp  test.hpp  util.hpp
